@@ -3,6 +3,13 @@
   - Undefined steps that use a form or grid now suggest a class along
     with the method.
 
+  - Scenarios with undefined steps now report that in their exception
+     message.
+
+  - Step definitions with longer names are now considered for matches
+    before those with shorter names. This fixes the problem where the
+    wrong step definition could get invoked.
+
 2.0.0.90 - 2010/07/11:
 
   - First release of BehaveN 2. Almost a complete rewrite with a
